# coremark

./: .gitignore  Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark.yml  benchmark_chart.py
crates/coremark/: Cargo.toml  build.rs
crates/coremark/coremark_wamr/: Cargo.toml
crates/coremark/coremark_wamr/src/: lib.rs
crates/coremark/coremark_wasm3/: Cargo.toml
crates/coremark/coremark_wasmedge/: Cargo.toml  build.rs
crates/coremark/coremark_wasmedge/src/: main.rs
crates/coremark/coremark_wasmer/: Cargo.toml
crates/coremark/coremark_wasmi/: Cargo.toml
crates/coremark/coremark_wasmi/src/: lib.rs
crates/coremark/src/: main.rs
crates/coremark/src/engines/: mod.rs  wamr.rs  wasm3.rs  wasmedge.rs  wasmer.rs  wasmi.rs  wasmtime.rs
crates/coremark_benchmark/: Cargo.toml
crates/coremark_benchmark/src/: lib.rs  list.rs
crates/coremark_engine/coremark_wasm3/: Cargo.toml
crates/coremark_engine/coremark_wasm3/src/: lib.rs
crates/coremark_engine/coremark_wasmedge/: Cargo.toml  build.rs
crates/coremark_engine/coremark_wasmedge/src/: lib.rs
crates/coremark_engine/coremark_wasmer/src/: lib.rs
crates/coremark_engine/coremark_wasmi/src/: lib.rs
crates/coremark_engine/coremark_wasmtime/: Cargo.toml
crates/coremark_engine/coremark_wasmtime/src/: lib.rs
crates/coremark_wasm/: Cargo.toml
crates/coremark_wasm/src/: allocator.rs  lib.rs  list.rs  matrix.rs  state.rs
src/: main.rs
